tests/ui/impl-trait/precise-capturing/rpitit-captures-more-method-lifetimes.stderr
error: return type captures more lifetimes than trait definition
  --> $DIR/rpitit-captures-more-method-lifetimes.rs:12:40
   |
LL |     fn bar<'im: 'im>(&'im mut self) -> impl Sized + use<'im> {}
   |            ---                         ^^^^^^^^^^^^^^^^^^^^^
   |            |
   |            this lifetime was captured
   |
note: hidden type must only reference lifetimes captured by this impl trait
  --> $DIR/rpitit-captures-more-method-lifetimes.rs:8:40
   |
LL |     fn bar<'tr: 'tr>(&'tr mut self) -> impl Sized + use<Self>;
   |                                        ^^^^^^^^^^^^^^^^^^^^^^
   = note: hidden type inferred to be `impl Sized`

error: aborting due to 1 previous error

